fix tooltip wrapping error

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -136,8 +136,6 @@ h3.title {
     font-weight: 700;
     font-style: normal;
     font-size: 14px;
-    white-space: nowrap;
-    /* line-height: 19.69px; */
 }
 .tooltip-group:not(:first-of-type) {
     margin-top: 8px;
